--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "rnprefix"
-version = "0.1.0"
-authors = ["Brad Alfirevic <brad@genbyte.dev>"]
-edition = "2018"
+version = "1.0.0"
+authors = ["Genevive <gen@nyble.dev>"]
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
